2010-06-26  Joseph Myers  <joseph@codesourcery.com>

	* collect2.c (main): Remove SWITCHES_NEED_SPACES conditional.
	* doc/tm.texi (SWITCHES_NEED_SPACES): Don't document.
	* gcc.c (SWITCHES_NEED_SPACES, switches_need_spaces): Remove.
	(static_specs): Remove switches_need_spaces.
	(process_command, do_self_spec): Hardcode handling "-o" instead of
	checking switches_need_spaces.
	* system.h (SWITCHES_NEED_SPACES): Poison.

2010-06-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44393
	* tree-loop-distribution.c (generate_loops_for_partition): Fix
	stmt removal and VOP renaming.
	(generate_memset_zero): Remove redundant stmt updating.
	* tree-flow.h (mark_virtual_ops_in_bb): Remove.
	* tree-cfg.c (mark_virtual_ops_in_bb): Likewise.

2010-06-26  Jan Hubicka  <jh@suse.cz>

	* ipa-split.c (consider_split): PHI in entry block is OK as long as all
	edges comming from header are equivalent.
	(visit_bb): Handle PHIs correctly.
	* tree-inline.c (copy_phis_for_bb): Be able to copy
	PHI from entry edge.
	(copy_cfg_body): Produce edge from entry BB before copying
	PHIs.

2010-06-26  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44674
	* tree-ssa-alias.c (refs_may_alias_p_1): Allow all kind of
	decls.  Handle LABEL_DECLs like FUNCTION_DECLs.

2010-06-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.c (n_switches_alloc, n_infiles_alloc, alloc_infile,
	add_infile, alloc_switch): New.
	(process_command): Remove variable lang_n_infiles.  Process
	options in a single pass.  Use new functions for allocating
	infiles and switches arrays.  Properly skip operands of
	-Xpreprocessor and -Xassembler.

2010-06-26  Jan Hubicka  <jh@suse.cz>

	PR middle-end/44671
	* cgraphunit.c (cgraph_function_versioning): Remove wrong
	cgraph_make_decl_local call; fix typo copying RTL data.

2010-06-25  DJ Delorie  <dj@redhat.com>

	* config/m32c/m32c-protos.h (m32c_note_pragma_address): Declare.
	(m32c_output_aligned_common): Likewise.