@@ -1,3 +1,9 @@
+2010-06-26  Douglas B Rupp  <rupp@gnat.com>
+
+	* config/alpha/alpha.c (alpha_need_linkage): Adjust
+	splay_tree_new_gcc_call.
+	(alpha_use_linkage): Likewise.
+
 2010-06-26  Joseph Myers  <joseph@codesourcery.com>
 
 	* collect2.c (main): Remove SWITCHES_NEED_SPACES conditional.
